<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/it_action_home"
        android:title="@string/home"
        android:button="@drawable/check_user_dislike_item_comment"/>

    <item
        android:id="@+id/it_action_explore"
        android:title="@string/explore"
        android:icon="@drawable/ic_explore_off"/>

    <item
        android:id="@+id/it_action_subscription"
        android:title="@string/subscriptions"
        android:icon="@drawable/ic_subscrip_off"/>

    <item
        android:id="@+id/it_action_notifications"
        android:title="@string/notifications"
        android:icon="@drawable/ic_notification_off"/>

    <item
        android:id="@+id/it_action_library"
        android:title="@string/library"
        android:icon="@drawable/ic_library_off"/>
</menu>