<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/cl_channel_search"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_marginTop="@dimen/dp8"
    android:layout_marginBottom="@dimen/dp8">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_channel_search"
        android:layout_width="0dp"
        android:layout_height="130dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintHeight_percent="0"
        app:layout_constraintWidth_percent="0.5"
        android:padding="@dimen/dp24"
        android:src="@drawable/iv_khoa_pham"/>

    <TextView
        android:id="@+id/tv_name_channel_search"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/iv_channel_search"
        app:layout_constraintRight_toLeftOf="@id/iv_menu_channel_search"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintWidth_percent="0.43"
        android:layout_marginTop="@dimen/dp18"
        android:text="@string/trung_t_m_o_t_o_tin_h_c_khoa_ph_m"
        android:textSize="@dimen/dp14"
        android:textColor="@color/black"
        tools:ignore="SpUsage" />

    <ImageView
        android:id="@+id/iv_menu_channel_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/tv_name_channel_search"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="@dimen/dp4"
        android:src="@drawable/ic_menu_vertical"/>

    <TextView
        android:id="@+id/tv_number_channel_sub_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_name_channel_search"
        app:layout_constraintLeft_toLeftOf="@id/tv_name_channel_search"
        android:layout_marginTop="@dimen/dp8"
        android:text="@string/_65_2k_subscribers"
        android:textColor="@color/colorCCC"
        android:textSize="@dimen/dp12"/>

    <View
        android:id="@+id/v_dot"
        android:layout_width="@dimen/dp1"
        android:layout_height="@dimen/dp1"
        app:layout_constraintTop_toTopOf="@id/tv_number_channel_sub_search"
        app:layout_constraintBottom_toBottomOf="@id/tv_number_channel_sub_search"
        app:layout_constraintLeft_toRightOf="@id/tv_number_channel_sub_search"
        android:background="@color/colorCCC"
        android:layout_marginLeft="6dp"/>

    <TextView
        android:id="@+id/tv_number_video_channel_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/v_dot"
        app:layout_constraintTop_toTopOf="@id/v_dot"
        app:layout_constraintBottom_toBottomOf="@id/v_dot"
        android:layout_marginLeft="@dimen/dp8"
        android:text="@string/_2_2k_videos"
        android:textColor="@color/colorCCC"
        android:textSize="@dimen/dp12"/>

    <TextView
        android:id="@+id/tv_sub_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_number_channel_sub_search"
        app:layout_constraintLeft_toLeftOf="@id/tv_number_channel_sub_search"
        android:layout_marginTop="@dimen/dp14"
        android:textStyle="bold"
        android:text="@string/subscribe"
        android:textSize="@dimen/dp12"
        android:textColor="@color/red"/>


</androidx.constraintlayout.widget.ConstraintLayout>