<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    android:id="@+id/reload_library"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_file_library"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="0.15"
            app:layout_constraintVertical_bias="0.15"
            android:src="@drawable/iv_file"/>

        <TextView
            android:id="@+id/tv_library"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/iv_file_library"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="@dimen/dp48"
            android:textStyle="bold"
            android:text="@string/enjoy_your_favorite_videos"
            android:textSize="@dimen/dp20"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tv_des_library"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_library"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintWidth_percent="0.8"
            android:layout_marginTop="@dimen/dp8"
            android:text="@string/des_library"
            android:textSize="@dimen/dp18"
            android:textColor="@color/color51"
            android:gravity="center"/>

        <Button
            android:id="@+id/bt_sign_in_user"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/sign_in"
            app:layout_constraintTop_toBottomOf="@id/tv_des_library"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHeight_percent="0.045"
            android:layout_marginTop="@dimen/dp18"
            android:background="@drawable/bg_bt_sign_in"
            android:textColor="@color/white"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


