<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/dp12"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/dp12">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/dp12">

        <View
            android:id="@+id/line_top_in_menu_item_video"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp8"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintWidth_percent="0.1"
            android:layout_marginTop="@dimen/dp8"
            android:background="@color/v8"/>

        <ImageView
            android:id="@+id/iv_menu_item_main_save_to_watch"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintWidth_percent="0.07"
            app:layout_constraintHeight_percent="0.16666666666666"
            android:layout_marginLeft="@dimen/dp18"
            android:layout_marginTop="@dimen/dp18"
            android:src="@drawable/ic_save_to_watch"/>

        <TextView
            android:id="@+id/tv_save_to_watch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/iv_menu_item_main_save_to_watch"
            app:layout_constraintBottom_toBottomOf="@id/iv_menu_item_main_save_to_watch"
            app:layout_constraintLeft_toRightOf="@id/iv_menu_item_main_save_to_watch"
            android:layout_marginStart="@dimen/dp18"
            android:text="@string/save_to_watch_later"
            android:textSize="@dimen/sp18"
            android:textColor="@color/black"/>


        <ImageView
            android:id="@+id/iv_menu_item_main_save_to_play_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/iv_menu_item_main_save_to_watch"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintWidth_percent="0.07"
            android:layout_marginLeft="@dimen/dp18"
            app:layout_constraintHeight_percent="0.16666666666666"
            android:src="@drawable/ic_save"/>

        <TextView
            android:id="@+id/tv_save_to_playlist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/iv_menu_item_main_save_to_play_list"
            app:layout_constraintBottom_toBottomOf="@id/iv_menu_item_main_save_to_play_list"
            app:layout_constraintLeft_toRightOf="@id/iv_menu_item_main_save_to_play_list"
            android:layout_marginStart="@dimen/dp18"
            android:text="@string/save_to_playlist"
            android:textSize="@dimen/sp18"
            android:textColor="@color/black"/>

        <ImageView
            android:id="@+id/iv_menu_item_main_share"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/iv_menu_item_main_save_to_play_list"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintWidth_percent="0.07"
            app:layout_constraintHeight_percent="0.16666666666666"
            android:layout_marginLeft="@dimen/dp18"
            android:src="@drawable/ic_share"/>

        <TextView
            android:id="@+id/tv_menu_item_share"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/iv_menu_item_main_share"
            app:layout_constraintBottom_toBottomOf="@id/iv_menu_item_main_share"
            app:layout_constraintLeft_toRightOf="@id/iv_menu_item_main_share"
            android:layout_marginStart="@dimen/dp18"
            android:text="@string/share"
            android:textSize="@dimen/sp18"
            android:textColor="@color/black"/>

        <ImageView
            android:id="@+id/iv_menu_item_main_not_interested"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/iv_menu_item_main_share"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintWidth_percent="0.07"
            app:layout_constraintHeight_percent="0.16666666666666"
            android:layout_marginLeft="@dimen/dp18"
            android:src="@drawable/ic_not_interested"/>

        <TextView
            android:id="@+id/tv_not_interested"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/iv_menu_item_main_not_interested"
            app:layout_constraintBottom_toBottomOf="@id/iv_menu_item_main_not_interested"
            app:layout_constraintLeft_toRightOf="@id/iv_menu_item_main_not_interested"
            android:layout_marginStart="@dimen/dp18"
            android:text="@string/not_interested"
            android:textSize="@dimen/sp18"
            android:textColor="@color/black"/>

        <ImageView
            android:id="@+id/iv_menu_item_main_not_recommend"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/iv_menu_item_main_not_interested"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintWidth_percent="0.07"
            app:layout_constraintHeight_percent="0.16666666666666"
            android:layout_marginLeft="@dimen/dp18"
            android:src="@drawable/ic_not_interested"/>

        <TextView
            android:id="@+id/tv_main_not_recommend"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/iv_menu_item_main_not_recommend"
            app:layout_constraintBottom_toBottomOf="@id/iv_menu_item_main_not_recommend"
            app:layout_constraintLeft_toRightOf="@id/iv_menu_item_main_not_recommend"
            android:layout_marginStart="@dimen/dp18"
            android:text="@string/don_t_recommend_channel"
            android:textSize="@dimen/sp18"
            android:textColor="@color/black"/>

        <ImageView
            android:id="@+id/iv_menu_item_main_report"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/iv_menu_item_main_not_recommend"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintWidth_percent="0.07"
            app:layout_constraintHeight_percent="0.16666666666666"
            android:layout_marginLeft="@dimen/dp18"
            android:src="@drawable/ic_flag_report"/>

        <TextView
            android:id="@+id/tv_menu_item_main_report"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/iv_menu_item_main_report"
            app:layout_constraintBottom_toBottomOf="@id/iv_menu_item_main_report"
            app:layout_constraintLeft_toRightOf="@id/iv_menu_item_main_report"
            android:layout_marginStart="@dimen/dp18"
            android:text="@string/report"
            android:textSize="@dimen/sp18"
            android:textColor="@color/black"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>