<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:paddingBottom="@dimen/dp16"
    android:layout_marginTop="@dimen/dp22">

    <ImageView
        android:id="@+id/iv_item_list_search"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp222"
        android:scaleType="centerCrop"
        android:src="@drawable/iv_main_model"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_name_list_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/iv_item_list_search"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/v_a_h_c_v_a_nh_n_b_u_tr_i_xanh_tuy_t_p_h_c_c_ng_t_i_b_s_u_t_p_nh_c_n_n_xu_t_1_gi"
        android:textColor="@color/black"
        android:maxWidth="360dp"
        android:textSize="@dimen/dp14"
        android:layout_marginLeft="@dimen/dp12"
        android:layout_marginTop="@dimen/dp8"/>

    <ImageView
        android:id="@+id/iv_menu_list_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/tv_name_list_search"
        app:layout_constraintLeft_toRightOf="@id/tv_name_list_search"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="1"
        android:src="@drawable/ic_menu_vertical"/>

    <TextView
        android:id="@+id/tv_name_channel_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_name_list_search"
        app:layout_constraintLeft_toLeftOf="@id/tv_name_list_search"
        android:text="Ngô ngọc diệp"
        android:textSize="@dimen/dp12"
        android:textColor="@color/colorCCC"/>

    <TextView
        android:id="@+id/tv_number_video_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_name_channel_list"
        app:layout_constraintLeft_toLeftOf="@id/tv_name_channel_list"
        android:textColor="@color/colorCCC"
        android:textSize="@dimen/dp12"
        android:text="@string/_194_video"/>

    <TextView
        android:id="@+id/tv_amount_video"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/iv_item_list_search"
        app:layout_constraintLeft_toLeftOf="@id/iv_item_list_search"
        app:layout_constraintBottom_toBottomOf="@id/iv_item_list_search"
        app:layout_constraintRight_toRightOf="@id/iv_item_list_search"
        app:layout_constraintWidth_percent="0.45"
        app:layout_constraintHorizontal_bias="1"
        android:text="@string/txt194"
        android:textColor="@color/white"
        android:textSize="@dimen/dp18"
        android:gravity="center"
        android:background="@color/blur_black"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/tv_amount_video"
        app:layout_constraintLeft_toLeftOf="@id/tv_amount_video"
        app:layout_constraintRight_toRightOf="@id/tv_amount_video"
        app:layout_constraintBottom_toBottomOf="@id/tv_amount_video"
        android:src="@drawable/ic_playlist_white"
        android:layout_marginTop="@dimen/dp48" />
</androidx.constraintlayout.widget.ConstraintLayout>